apps/base/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
        - image: redis/redis-stack:6.2.6-v7
          name: redis
          ports:
            - containerPort: 6379
              name: client
            - containerPort: 8001
              name: http
          startupProbe:
            exec:
              command:
                - bash
                - -c
                - '[[ "$(redis-cli PING)" == "PONG" ]]'
            failureThreshold: 30
            periodSeconds: 5
            terminationGracePeriodSeconds: 60
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - '[[ "$(redis-cli PING)" == "PONG" ]]'
            failureThreshold: 3
            periodSeconds: 5
            terminationGracePeriodSeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 8001
            successThreshold: 1
            initialDelaySeconds: 10
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - mountPath: /data
              name: data
              readOnly: false
      nodeSelector:
        gke.kfirs.com/purpose: workloads
      tolerations:
        - key: gke.kfirs.com/purpose
          operator: Equal
          value: workloads
          effect: NoExecute
      serviceAccountName: redis
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis
            readOnly: false
