apps/base/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: client
      port: 6379
      protocol: TCP
      targetPort: client
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: redis
  type: ClusterIP
