apps/base/redis/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: client-tls
      port: 6379
      protocol: TCP
      targetPort: client-tls
    - name: client-nontls
      port: 6380
      protocol: TCP
      targetPort: client-nontls
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: redis
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redis-kfirs-com-https
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`redis.default.kfirs.com`)
      services:
        - kind: Service
          name: redis
          port: http
  tls:
    secretName: redis-kfirs-com-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-tcp
spec:
  entryPoints: [redis]
  routes:
    - match: HostSNI(`redis.default.kfirs.com`)
      services:
        - name: redis
          port: client-tls
  tls:
    passthrough: true
    secretName: redis-kfirs-com-tls
